<?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. --><project name="DLP" default="default" basedir=".">
    <description>Builds, tests, and runs the project DLP.</description>
    <import file="nbproject/build-impl.xml"/>
    
    <!-- Override JavaFX deployment targets to skip obsolete deployment checks -->
    <target name="-check-jfx-deployment">
        <echo message="Skipping JavaFX deployment check (using modern JavaFX as regular library)"/>
        <property name="jfx-deployment-available" value="true"/>
    </target>
    
    <target name="-check-jfx-runtime">
        <echo message="Skipping JavaFX runtime check (using modern JavaFX as regular library)"/>
        <property name="jfx-runtime-available" value="true"/>
    </target>
    
    <target name="deploy-preprocess">
        <echo message="Skipping JavaFX deploy preprocess"/>
    </target>
    
    <target name="deploy-defines">
        <echo message="Skipping JavaFX deploy defines"/>
    </target>
    
    <!-- Override the JavaFX application macrodef -->
    <macrodef name="fallback-deploy-application-def">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-application-def"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-application-def-preloader">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-application-def-preloader"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-application-def-swing">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-application-def-swing"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-resources">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-resources"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-resources-preloader">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-resources-preloader"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-jar">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-jar"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-deploy">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-deploy"/>
        </sequential>
    </macrodef>
    
    <macrodef name="fallback-deploy-deploy-template">
        <sequential>
            <echo message="Skipping JavaFX fallback-deploy-deploy-template"/>
        </sequential>
    </macrodef>
    
    <target name="-pre-jfx-deploy">
        <echo message="Skipping JavaFX pre-deploy"/>
    </target>
    
    <target name="-post-jfx-deploy">
        <echo message="Skipping JavaFX post-deploy"/>
    </target>
    
    <!-- Override JavaFX run targets to use regular Java execution -->
    <target name="jfx-run" depends="jar">
        <echo message="Running application as regular Java application"/>
        <java classname="MainApp" fork="true">
            <jvmarg value="--module-path"/>
            <jvmarg value="C:\\Users\\Downloads\\zulu23.32.11-ca-fx-jdk23.0.2-win_x64\\zulu23.32.11-ca-fx-jdk23.0.2-win_x64\\jmods"/>
            <jvmarg value="--add-modules"/>
            <jvmarg value="javafx.controls,javafx.fxml,javafx.graphics"/>
            <classpath>
                <pathelement path="${dist.jar}"/>
                <pathelement location="${dist.dir}\\lib\\sqlite-jdbc-3.53.2.0.jar"/>
                <pathelement location="${dist.dir}\\lib\\jbcrypt-0.4.jar"/>
            </classpath>
        </java>
    </target>
    
    <target name="-fallback-deploy-application-def">
        <echo message="Skipping JavaFX fallback deploy application definition"/>
    </target>
    
    <target name="-fallback-deploy-resources">
        <echo message="Skipping JavaFX fallback deploy resources"/>
    </target>
    
    <target name="-fallback-deploy-jar">
        <echo message="Skipping JavaFX fallback deploy jar"/>
    </target>
    
    <target name="-fallback-deploy-deploy">
        <echo message="Skipping JavaFX fallback deploy deploy"/>
    </target>
    
    <!-- Override the main run target -->
    <target name="run" depends="jar">
        <echo message="Running application as regular Java application"/>
        <echo message="Using JDK: ${platforms.JDK_23.home}"/>
        <java classname="MainApp" fork="true" jvm="${platforms.JDK_23.home}\\bin\\java.exe">
            <jvmarg value="--module-path"/>
            <jvmarg value="${platforms.JDK_23.home}\\jmods"/>
            <jvmarg value="--add-modules"/>
            <jvmarg value="javafx.controls,javafx.fxml,javafx.graphics"/>
            <jvmarg value="-Djava.library.path=${platforms.JDK_23.home}\\bin"/>
            <classpath>
                <pathelement path="${dist.jar}"/>
                <pathelement location="${dist.dir}\\lib\\sqlite-jdbc-3.53.2.0.jar"/>
                <pathelement location="${dist.dir}\\lib\\jbcrypt-0.4.jar"/>
            </classpath>
        </java>
    </target>
    
    <!-- Override to manually copy required libraries -->
    <target name="-post-jar">
        <echo message="Copying required libraries to dist/lib"/>
        <copy file="C:\\Users\\Admin\\Downloads\\sqlite-jdbc-3.53.2.0.jar" todir="${dist.dir}\\lib" failonerror="false"/>
        <copy file="..\\..\\..\\..\\Downloads\\jbcrypt-0.4.jar" todir="${dist.dir}\\lib" failonerror="false"/>
    </target>
    
    <!-- Override JavaFX-specific run targets -->
    <target name="jfxsa-run">
        <echo message="Redirecting jfxsa-run to regular run"/>
        <antcall target="run"/>
    </target>
    
    <target name="jfxsa-run-no-another-jvm">
        <echo message="Redirecting jfxsa-run-no-another-jvm to regular run"/>
        <antcall target="run"/>
    </target>
    
    <target name="jfx-project-run">
        <echo message="Redirecting jfx-project-run to regular run"/>
        <antcall target="run"/>
    </target>
    
    <!--

    There exist several targets which are by default empty and which can be 
    used for execution of your tasks. These targets are usually executed 
    before and after some main targets. Those of them relevant for JavaFX project are: 

      -pre-init:                 called before initialization of project properties
      -post-init:                called after initialization of project properties
      -pre-compile:              called before javac compilation
      -post-compile:             called after javac compilation
      -pre-compile-test:         called before javac compilation of JUnit tests
      -post-compile-test:        called after javac compilation of JUnit tests
      -pre-jfx-jar:              called before FX SDK specific <fx:jar> task
      -post-jfx-jar:             called after FX SDK specific <fx:jar> task
      -pre-jfx-deploy:           called before FX SDK specific <fx:deploy> task
      -post-jfx-deploy:          called after FX SDK specific <fx:deploy> task
      -pre-jfx-native:           called just after -pre-jfx-deploy if <fx:deploy> runs in native packaging mode
      -post-jfx-native:          called just after -post-jfx-deploy if <fx:deploy> runs in native packaging mode
      -post-clean:               called after cleaning build products

    (Targets beginning with '-' are not intended to be called on their own.)

    Example of inserting a HTML postprocessor after javaFX SDK deployment:

        <target name="-post-jfx-deploy">
            <basename property="jfx.deployment.base" file="${jfx.deployment.jar}" suffix=".jar"/>
            <property name="jfx.deployment.html" location="${jfx.deployment.dir}${file.separator}${jfx.deployment.base}.html"/>
            <custompostprocess>
                <fileset dir="${jfx.deployment.html}"/>
            </custompostprocess>
        </target>

    Example of calling an Ant task from JavaFX SDK. Note that access to JavaFX SDK Ant tasks must be
    initialized; to ensure this is done add the dependence on -check-jfx-sdk-version target:

        <target name="-post-jfx-jar" depends="-check-jfx-sdk-version">
            <echo message="Calling jar task from JavaFX SDK"/>
            <fx:jar ...>
                ...
            </fx:jar>
        </target>

    For more details about JavaFX SDK Ant tasks go to
    http://docs.oracle.com/javafx/2/deployment/jfxpub-deployment.htm

    For list of available properties check the files
    nbproject/build-impl.xml and nbproject/jfx-impl.xml.

    -->
</project>
